MFH (r214982, r214985): fix CPU ID in /proc/cpuinfo.

PR:             kern/56451
Approved by:	re (kib)

Former-commit-id: 9550cddec162777c66d40f4c4b93b61e161bfb34